modify mail template

--- a/resource/mail_template/transaction_block_notice.html
+++ b/resource/mail_template/transaction_block_notice.html
@@ -38,7 +38,7 @@
                   <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                 </td>
                 <td width="94.19%" rowspan="1" colspan="1">
-                  <p align="left" style="color:rgb(0,23,90);font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">ACCOUNT ENDING:&nbsp; <b>${TX_ENDING}</b>
+                  <p align="left" style="color:rgb(0,23,90);font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">ACCOUNT ENDING:&nbsp; <b>{TX_ENDING}</b>
                   </p>
                 </td>
               </tr>
@@ -53,7 +53,7 @@
                 </td>
                 <td width="90%" rowspan="1" colspan="1" style="background-color:rgb(0,23,90)">
                   <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
-                  <p style="color:white;font-size:21.3px;font-family:Arial;margin-top:0px;margin-bottom:0px">Dear ${TX_NAME},&nbsp; <b>Please review</b>
+                  <p style="color:white;font-size:21.3px;font-family:Arial;margin-top:0px;margin-bottom:0px">Dear {TX_NAME},&nbsp; <b>Please review</b>
                   </p>
                   <p style="font-size:6pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                   <p style="color:white;font-size:21.3px;font-family:Arial;margin-top:0px;margin-bottom:0px">
@@ -85,7 +85,7 @@
                 </td>
                 <td width="55%" rowspan="1" colspan="1">
                   <p align="left" style="color:rgb(0,23,90);font-size:13pt;font-family:Arial;margin-top:0px;margin-bottom:0px">
-                    <b>A charge of ${TX_AMOUNT} was attempted at ${TX_MERCHANT}.</b>
+                    <b>A charge of {TX_AMOUNT} was attempted at {TX_MERCHANT}.</b>
                   </p>
                 </td>
                 <td width="15%" rowspan="1" colspan="1">
@@ -152,7 +152,7 @@
                         <td width="35%" rowspan="1" colspan="1">
                           <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                           <p align="left" style="color:rgb(0,23,90);font-size:13pt;font-family:Arial;margin-top:0px;margin-bottom:0px">
-                            <b>${TX_MERCHANT}</b>
+                            <b>{TX_MERCHANT}</b>
                           </p>
                           <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                         </td>
@@ -180,7 +180,7 @@
                         <td width="35%" rowspan="1" colspan="1" style="border-top-color:rgb(217,217,214);border-top-style:solid;border-top-width:3pt">
                           <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                           <p align="left" style="font-size:13pt;font-family:Arial;margin-top:0px;margin-bottom:0px">
-                            <b>${TX_DATE}</b>
+                            <b>{TX_DATE}</b>
                           </p>
                           <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                         </td>
@@ -208,7 +208,7 @@
                         <td width="35%" rowspan="1" colspan="1" style="border-top-color:rgb(217,217,214);border-top-style:solid;border-top-width:3pt">
                           <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                           <p style="font-size:13pt;font-family:Arial;margin-top:0px;margin-bottom:0px">
-                            <b>${TX_AMOUNT}</b>
+                            <b>{TX_AMOUNT}</b>
                           </p>
                           <p style="font-size:10pt;font-family:Arial;margin-top:0px;margin-bottom:0px">&nbsp;</p>
                         </td>
