fix minor name in mail template

--- a/resource/mail_template/transaction_confirmation.html
+++ b/resource/mail_template/transaction_confirmation.html
@@ -1467,7 +1467,7 @@
                       margin-bottom: 0px;
                     "
                   >
-                    <b>Millenium Account Protection Services</b>
+                    <b>CapitalOne Account Protection Services</b>
                   </p>
                   <p
                     style="
